Reformatted the code following conventions closer to Java (reduced white space). Fixed quite a few warning in PMD there are still quite a few